--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 * text=auto
 *.css linguist-vendored
 *.scss linguist-vendored
+*.js linguist-language=go
+*.css linguist-language=go
+*.html linguist-language=go
